<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.eclipse.ee4j</groupId>
        <artifactId>project</artifactId>
        <version>1.0.9</version>
        <relativePath/>
    </parent>
    <groupId>org.glassfish</groupId>
    <artifactId>glassfish.jsonb-tck</artifactId>
    <version>3.0.0-SNAPSHOT</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.release>17</maven.compiler.release>
        <!-- glassfish properties -->
        <glassfish.major>8</glassfish.major>
        <glassfish.home>${project.build.directory}/glassfish${glassfish.major}</glassfish.home>
        <glassfish.lib.dir>${glassfish.home}/glassfish/lib</glassfish.lib.dir>
        <glassfish.runner.version>11.0.1</glassfish.runner.version>
        <glassfish.version>8.0.0-M9</glassfish.version>
        <glassfish-artifact-id>glassfish</glassfish-artifact-id>
        <tck.artifactId>jakarta.json.bind-tck</tck.artifactId>
        <tck.version>11.0.1-SNAPSHOT</tck.version>
    </properties>
    <dependencyManagement>
        <dependencies>
            <!-- Single Arquillian BOM -->
            <dependency>
                <groupId>org.jboss.arquillian</groupId>
                <artifactId>arquillian-bom</artifactId>
                <version>1.9.4.Final</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- ShrinkWrap Resolver BOM -->
            <dependency>
                <groupId>org.jboss.shrinkwrap.resolver</groupId>
                <artifactId>shrinkwrap-resolver-bom</artifactId>
                <version>3.1.4</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>jakarta.json.bind</groupId>
            <artifactId>jakarta.json.bind-tck</artifactId>
            <version>3.0.0-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.glassfish.main.distributions</groupId>
            <artifactId>${glassfish-artifact-id}</artifactId>
            <version>${glassfish.version}</version>
            <type>zip</type>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>jakarta.tck</groupId>
            <artifactId>jsonb-tck-arquillian-extension</artifactId>
            <version>1.0.0</version>
        </dependency>
        <!-- Arquillian Dependencies -->
        <dependency>
            <groupId>org.jboss.arquillian.junit5</groupId>
            <artifactId>arquillian-junit5-container</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.11.4</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.11.4</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest</artifactId>
            <version>3.0</version>
            <scope>test</scope>
        </dependency>
        <!-- GlassFish Container Adapter -->
        <dependency>
            <groupId>org.omnifaces.arquillian</groupId>
            <artifactId>arquillian-glassfish-server-managed</artifactId>
            <version>1.8</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.omnifaces.arquillian</groupId>
            <artifactId>glassfish-client-ee11</artifactId>
            <version>1.8</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.arquillian.protocol</groupId>
            <artifactId>arquillian-protocol-servlet</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- Required for managed containers -->
        <dependency>
            <groupId>org.jboss.arquillian.container</groupId>
            <artifactId>arquillian-container-spi</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- ShrinkWrap Resolver Implementation -->
        <dependency>
            <groupId>org.jboss.shrinkwrap.resolver</groupId>
            <artifactId>shrinkwrap-resolver-impl-maven</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.weld.se</groupId>
            <artifactId>weld-se-core</artifactId>
            <version>6.0.1.Final</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.8.1</version>
                <executions>
                    <execution>
                        <id>unpack</id>
                        <goals>
                            <goal>unpack</goal>
                        </goals>
                        <phase>generate-test-resources</phase>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>org.glassfish.main.distributions</groupId>
                                    <artifactId>${glassfish-artifact-id}</artifactId>
                                    <version>${glassfish.version}</version>
                                    <type>zip</type>
                                    <overWrite>false</overWrite>
                                    <outputDirectory>${project.build.directory}</outputDirectory>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <executions>
                    <execution>
                        <id>jsonb-tests</id>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                        <configuration>
                            <argLine>-Djava.locale.providers=COMPAT</argLine>
                            <dependenciesToScan>jakarta.json.bind:jakarta.json.bind-tck</dependenciesToScan>
                            <includes>
                                <include>**/*Test*.java</include>
                            </includes>
                            <trimStackTrace>false</trimStackTrace>
                            <failIfNoTests>true</failIfNoTests>
                            <systemPropertyVariables>
                                <jimage.dir>${project.build.directory}/jdk-bundle</jimage.dir>
                                <signature.sigTestClasspath>${glassfish.home}/glassfish/modules/jakarta.json.bind-api.jar:${project.build.directory}/jdk-bundle/java.base:${project.build.directory}/jdk-bundle/java.rmi:${project.build.directory}/jdk-bundle/java.sql:${project.build.directory}/jdk-bundle/java.naming</signature.sigTestClasspath>
                                <glassfish.home>${glassfish.home}</glassfish.home>
                            </systemPropertyVariables>
                            <additionalClasspathElements>
                                <additionalClasspathElement>${glassfish.home}/glassfish/modules/jakarta.json.bind-api.jar</additionalClasspathElement>
                                <additionalClasspathElement>${glassfish.home}/glassfish/modules/jakarta.json-api.jar</additionalClasspathElement>
                                <additionalClasspathElement>${glassfish.home}/glassfish/modules/jakarta.enterprise.cdi-api.jar</additionalClasspathElement>
                                <additionalClasspathElement>${glassfish.home}/glassfish/modules/jakarta.inject-api.jar</additionalClasspathElement>
                                <additionalClasspathElement>${glassfish.home}/glassfish/modules/yasson.jar</additionalClasspathElement>
                                <additionalClasspathElement>${glassfish.home}/glassfish/modules/parsson.jar</additionalClasspathElement>
                            </additionalClasspathElements>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>full</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <glassfish-artifact-id>glassfish</glassfish-artifact-id>
            </properties>
        </profile>
        <profile>
            <id>web</id>
            <properties>
                <glassfish-artifact-id>web</glassfish-artifact-id>
            </properties>
        </profile>
    </profiles>
</project>